# benjibot

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SETUP.md  benjibot.cabal.disabled  cabal.project  package.yaml.disabled  stack.yaml  stack.yaml.old
.github/workflows/: main.yml  parseVersions.hs
benjibot-core/: benjibot-core.cabal  stack.yaml.disabled
benjibot-core/app/: Main.hs
benjibot-core/src/Discord/: BenjiBot.hs
benjibot-core/src/Discord/BenjiBot/: Handler.hs  Plugins.hs  Utility.hs
benjibot-core/src/Discord/BenjiBot/Internal/: Administration.hs  Alias.hs  Cache.hs  Embed.hs  Permission.hs  Plugins.hs  Types.hs
benjibot-core/src/Discord/BenjiBot/Internal/Handler/: Command.hs  Event.hs
benjibot-core/src/Discord/BenjiBot/Plugins/: Administration.hs  Alias.hs  Basic.hs  Ping.hs
benjibot-core/src/Discord/BenjiBot/Utility/: Database.hs  Discord.hs  Embed.hs  Exception.hs  Font.hs  Help.hs  Parser.hs  Permission.hs  Random.hs  Search.hs  SmartParser.hs  Types.hs  Utils.hs
benjibot-core/src/Discord/BenjiBot/Utility/SmartParser/: Interactions.hs  SmartParser.hs  Types.hs
benjibot-plugins/: benjibot-plugins.cabal
benjibot-plugins/Discord/BenjiBot/Plugins/: Cats.hs  Dogs.hs  Reminder.hs  Say.hs  Shibe.hs  Suggest.hs  Welcome.hs
benjibot-plugins/Discord/BenjiBot/Plugins/Netrunner/: Plugin.hs
benjibot-plugins/Discord/BenjiBot/Plugins/Netrunner/Command/: BanList.hs  Rules.hs
benjibot-plugins/Discord/BenjiBot/Plugins/Netrunner/Type/: Card.hs  Cycle.hs  Faction.hs  Pack.hs
benjibot-plugins/Discord/BenjiBot/Plugins/Netrunner/Utility/: BanList.hs  Cycle.hs  Embed.hs  Faction.hs  Misc.hs  Pack.hs
benjibot-plugins/Discord/BenjiBot/Plugins/Roll/: Dice.hs
benjibot-plugins/Discord/BenjiBot/Plugins/Roll/Dice/: DiceData.hs  DiceEval.hs  DiceParsing.hs
benjibot-plugins/app/: Main.hs
benjibot-plugins/src/Discord/BenjiBot/Plugins/: Cats.hs  Extended.hs  Flip.hs  Fox.hs  Netrunner.hs  Quote.hs  Reminder.hs  Roll.hs  Welcome.hs
benjibot-plugins/src/Discord/BenjiBot/Plugins/Netrunner/Command/: Custom.hs  Find.hs  Help.hs  Search.hs
benjibot-plugins/src/Discord/BenjiBot/Plugins/Netrunner/Type/: BanList.hs  Card.hs  Cycle.hs  Faction.hs  NrApi.hs  Pack.hs  Type.hs
benjibot-plugins/src/Discord/BenjiBot/Plugins/Netrunner/Utility/: Card.hs  NrApi.hs
benjibot-plugins/src/Discord/BenjiBot/Plugins/Roll/: Plugin.hs
benjibot-plugins/src/Discord/BenjiBot/Plugins/Roll/Dice/: DiceData.hs  DiceEval.hs  DiceFunctions.hs  DiceParsing.hs  DiceStats.hs  DiceStatsBase.hs
tutorials/: 1.Plugins.md  2.Exceptions.md  3.Interactions.md
