cabal-version:      2.4
name:               benjibot-plugins
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             L0neGamer
maintainer:         benjaminbwm@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Discord.BenjiBot.Plugins.Cats
    Discord.BenjiBot.Plugins.Dogs
    Discord.BenjiBot.Plugins.Extended
    Discord.BenjiBot.Plugins.Flip
    Discord.BenjiBot.Plugins.Fox
    Discord.BenjiBot.Plugins.Netrunner
    Discord.BenjiBot.Plugins.Netrunner.Command.BanList
    Discord.BenjiBot.Plugins.Netrunner.Command.Custom
    Discord.BenjiBot.Plugins.Netrunner.Command.Find
    Discord.BenjiBot.Plugins.Netrunner.Command.Help
    Discord.BenjiBot.Plugins.Netrunner.Command.Rules
    Discord.BenjiBot.Plugins.Netrunner.Command.Search
    Discord.BenjiBot.Plugins.Netrunner.Plugin
    Discord.BenjiBot.Plugins.Netrunner.Type.BanList
    Discord.BenjiBot.Plugins.Netrunner.Type.Card
    Discord.BenjiBot.Plugins.Netrunner.Type.Cycle
    Discord.BenjiBot.Plugins.Netrunner.Type.Faction
    Discord.BenjiBot.Plugins.Netrunner.Type.NrApi
    Discord.BenjiBot.Plugins.Netrunner.Type.Pack
    Discord.BenjiBot.Plugins.Netrunner.Type.Type
    Discord.BenjiBot.Plugins.Netrunner.Utility.BanList
    Discord.BenjiBot.Plugins.Netrunner.Utility.Card
    Discord.BenjiBot.Plugins.Netrunner.Utility.Cycle
    Discord.BenjiBot.Plugins.Netrunner.Utility.Embed
    Discord.BenjiBot.Plugins.Netrunner.Utility.Faction
    Discord.BenjiBot.Plugins.Netrunner.Utility.Misc
    Discord.BenjiBot.Plugins.Netrunner.Utility.NrApi
    Discord.BenjiBot.Plugins.Netrunner.Utility.Pack
    Discord.BenjiBot.Plugins.Quote
    Discord.BenjiBot.Plugins.Reminder
    Discord.BenjiBot.Plugins.Roll
    Discord.BenjiBot.Plugins.Roll.Dice
    Discord.BenjiBot.Plugins.Roll.Dice.DiceData
    Discord.BenjiBot.Plugins.Roll.Dice.DiceEval
    Discord.BenjiBot.Plugins.Roll.Dice.DiceFunctions
    Discord.BenjiBot.Plugins.Roll.Dice.DiceParsing
    Discord.BenjiBot.Plugins.Roll.Dice.DiceStats
    Discord.BenjiBot.Plugins.Roll.Dice.DiceStatsBase
    Discord.BenjiBot.Plugins.Roll.Plugin
    Discord.BenjiBot.Plugins.Say
    Discord.BenjiBot.Plugins.Shibe
    Discord.BenjiBot.Plugins.Suggest
    Discord.BenjiBot.Plugins.Welcome

  -- Modules included in this library but not exported.
  -- other-modules:
  other-extensions:
    BangPatterns
    DeriveGeneric
    DuplicateRecordFields
    LambdaCase
    LiberalTypeSynonyms
    ScopedTypeVariables
    TypeApplications

  default-extensions:
    BangPatterns
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications

  build-depends:
    , aeson                   ^>=2
    , base                    >=4.15      && <4.18
    , benjibot-core
    , bytestring              ^>=0.11.4.0
    , Chart                   >=1         && <2
    , Chart-diagrams          >=1         && <2
    , containers              ^>=0.6.5.1
    , data-default            <1
    , diagrams-core           >=1         && <2
    , diagrams-lib            >=1         && <2
    , diagrams-postscript     >=1         && <2
    , diagrams-rasterific     >=1         && <2
    , diagrams-svg            >=1         && <2
    , discord-haskell         >=1.14      && <1.16
    , distribution            >=1         && <2
    , duckling                <1
    , edit-distance           <1
    , esqueleto               >=3         && <4
    , exception-transformers  ^>=0.4
    , extra                   >=1         && <2
    , http-conduit            ^>=2.3
    , JuicyPixels             >=3         && <4
    , megaparsec              >=9         && <10
    , mtl                     ^>=2.2.2
    , persistent              >=2.0       && <3
    , persistent-sqlite       >=2         && <3
    , process                 ^>=1.6.16.0
    , random                  >=1         && <2
    , raw-strings-qq          >=1         && <2
    , scientific              <1
    , split                   <1
    , svg-builder             <1
    , text                    ^>=1.2.5.0
    , text-icu                <1
    , th-printf               <1
    , time                    ^>=1.11.1.1
    , timezone-olson          <1
    , transformers            ^>=0.5.6.2
    , unliftio                <1
    , unordered-containers    <1
    , yaml                    <1

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -fno-show-valid-hole-fits

-- executable benjibot-core
--     main-is:          Main.hs

--     -- Modules included in this executable, other than Main.
--     -- other-modules:
--     other-extensions:
--         BangPatterns DeriveGeneric LambdaCase LiberalTypeSynonyms
--         DuplicateRecordFields ScopedTypeVariables TypeApplications

--     build-depends:
--         base ^>=4.16.4.0,
--         mtl ^>=2.2.2,
--         containers ^>=0.6.5.1,
--         text ^>=1.2.5.0,
--         transformers ^>=0.5.6.2,
--         time ^>=1.11.1.1,
--         bytestring ^>=0.11.4.0,
--         process ^>=1.6.16.0

--     hs-source-dirs:   app
--     default-language: Haskell2010
